--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pycodestyle==2.8.0
 pylint==2.12.2
 sqlparse==0.4.2
 toml==0.10.2
+typing_extensions==4.1.1
+uWSGI==2.0.20
 whitenoise==6.0.0
 wrapt==1.13.3
-psycopg2==2.9.3
-uWSGI==2.0.20
